# zyxel-t50

./: README.md  setup.cfg
src/zyxelt50/: helpers.py  modem.py
