[metadata]
name = zyxel-t50-modem
version = 0.0.2
author = SLG
author_email = github@slbg.nl
description = A wrapper for the Zyxel T50 modem
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SLG/zyxel-t50
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
